# docs/swagger.json
@@ -203,50 +203,6 @@
                     }
                 }
             }
-        },
-        "/user/topup": {
-            "patch": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "top up user balance based on token",
-                "parameters": [
-                    {
-                        "description": "Top Up",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/dto.TopUpBalanceDto"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/utils.HttpSuccess-string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/utils.HttpError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/utils.HttpError"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -265,32 +221,25 @@
                 }
             }
         },
-        "dto.TopUpBalanceDto": {
-            "type": "object",
-            "required": [
-                "balance"
-            ],
-            "properties": {
-                "balance": {
-                    "type": "integer"
-                }
-            }
-        },
         "dto.UpsertUserDto": {
             "type": "object",
             "required": [
+                "age",
                 "email",
-                "full_name",
-                "password"
+                "password",
+                "username"
             ],
             "properties": {
+                "age": {
+                    "type": "integer"
+                },
                 "email": {
                     "type": "string"
                 },
-                "full_name": {
+                "password": {
                     "type": "string"
                 },
-                "password": {
+                "username": {
                     "type": "string"
                 }
             }
